# security_basic_math_knowledge

./: Divisible_possibilties.md  README.md  congruence.md  produceRM.py  upload.sh
code/: CMakeLists.txt  Euclidean_algorithm.cpp  Extended_Euclidean_algorithm.cpp  high_power_modular_operations.cpp  judge_prime_number.cpp
