cmake_minimum_required(VERSION 3.17)
project(code)

set(CMAKE_CXX_STANDARD 14)

add_executable(judge_prime_number judge_prime_number.cpp)
add_executable(Extended_Euclidean_algorithm Extended_Euclidean_algorithm.cpp)
add_executable(Euclidean_algorithm Euclidean_algorithm.cpp)
add_executable(high_power_modular_operations high_power_modular_operations.cpp)